# ai-inbox-env

./: Dockerfile  README.md  gmail_agent.py  gmail_ai_agent.py  gmail_auth.py  gmail_reader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
myenv/: environment.py  models.py  tasks.py
server/: serverapp.py.txt
server/server/: app.py
